--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,6 +1,6 @@
 <div>
     <h2>
-        The Server is going to be {{status}} in {{min}} Minutes 
+        The Server is going to be {{status}} in {{min}} Minute
     </h2>
 </div>
 
